# bigint.cpp

./: .gitignore  CMakeLists.txt  README.md  makeproject.sh  meson.build  release.sh  setup.sh  test.cpp
include/: bigint.hpp  meson.build
src/: bigint.cpp  meson.build
test/: meson.build  test.cpp
